[tool.poetry]
name = "imagetokenwords"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
#package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.0.0"
#torchvision = "^0.15.1"
#groundlight-predictors = {path = "../zuuul/predictors/", develop = true}
#lightning = "^2.0.0"
#skorch = "^0.13.0"
#vit-pytorch = "^1.2.0"
#timm = "^0.9.2"
#torchtext = "^0.15.1"
#spacy = "^3.5.2"
#tensorflow = "^2.12.0"
#opencv-python = "^4.7.0.72"
#segment-anything = "^1.0"

# [[tool.poetry.source]]
# name = "internal"
# url = "https://positronix-723181461334.d.codeartifact.us-west-2.amazonaws.com/pypi/internal/simple/"
#tiktoken = "^0.5.2"
#mmdet = "^3.3.0"
#mmcv = "^2.1.0"
#scikit-posthocs = "^0.9.0"
#pymc = "^5.15.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"
transformers = "^4.41.2"
datasets = "^2.20.0"
hf-transfer = "^0.1.6"
accelerate = "^0.31.0"
imgcat = "^0.5.0"
matplotlib = "^3.9.0"
typer = "^0.12.3"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
plotly = "^5.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

