[tool.poetry]
name = "imagetokenwords"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
#package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.0.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"
transformers = "^4.41.2"
datasets = "^2.20.0"
hf-transfer = "^0.1.6"
accelerate = "^0.31.0"
imgcat = "^0.5.0"
matplotlib = "^3.9.0"
typer = "^0.12.3"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
plotly = "^5.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

